# dkvs

./: .gitignore  CHANGELOG-v0.md  Cargo.toml  README.md  server.json
src/: app.rs  lib.rs  main.rs
src/app/: server.rs
src/fs/: config.rs
src/net/: client.rs  mod.rs  server.rs
src/utils/: mod.rs  task.rs
